Long task title overflow fixed

--- a/css/tasks.css
+++ b/css/tasks.css
@@ -34,6 +34,7 @@
     position: relative;
     height: 62rem;
     min-width: 40rem;
+    max-width: 40rem;
     border-radius: 15px;
     box-shadow: 0 0 10px 2px rgba(0, 0, 0, 0.5);
     background-color: aliceblue;
@@ -84,6 +85,9 @@
     border-radius: 5px;
 }
 .taskDiv p{
+    overflow: hidden;
+    white-space: nowrap;    
+    text-overflow: ellipsis;
     margin: 0;
     margin-left: 1rem;
 }
